// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fixtures > tests/fixtures/basic.vue 1`] = `
"import { defineComponent } from 'vue';
import __MACROS_useVModel from '/vue-macros/define-models/use-vmodel';
import _export_sfc from '/plugin-vue/export-helper';

const name = \\"Foo\\";
const __default__ = defineComponent({
  name
});
var _sfc_main = /* @__PURE__ */ defineComponent({
  ...__default__,
  props: {
    \\"modelValue\\": { type: String, required: true },
    \\"title\\": { type: String, required: true }
  },
  emits: [\\"update:modelValue\\", \\"change\\"],
  setup(__props, { emit }) {
    let { modelValue } = __MACROS_useVModel(\\"modelValue\\");
    const handleClick = () => {
      emit(\\"change\\");
      modelValue.value = \\"hello, \\" + __props.title;
    };
    return () => {
    };
  }
});

var basic = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { basic as default };
"
`;

exports[`fixtures > tests/fixtures/case-233.vue 1`] = `
"import { defineComponent } from 'vue';
import _export_sfc from '/plugin-vue/export-helper';

const msg = \\"Hello\\";
var _sfc_main = /* @__PURE__ */ defineComponent({
  __name: \\"case-233\\",
  props: {
    \\"msg\\": { type: String, required: true, default: msg }
  },
  setup(__props) {
    return () => {
    };
  }
});

var case233 = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { case233 as default };
"
`;

exports[`fixtures > tests/fixtures/define-props-refs.vue 1`] = `
"import { defineComponent, toRefs } from 'vue';
import _export_sfc from '/plugin-vue/export-helper';

var _sfc_main = /* @__PURE__ */ defineComponent({
  __name: \\"define-props-refs\\",
  props: {
    \\"foo\\": { type: String, required: true }
  },
  setup(__props) {
    const __MACROS_props = __props;
    const { foo } = toRefs(__MACROS_props);
    console.log(foo.value);
    foo.value = \\"hello\\";
    return () => {
    };
  }
});

var definePropsRefs = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { definePropsRefs as default };
"
`;

exports[`fixtures > tests/fixtures/hoist-static.vue 1`] = `
"import { defineComponent } from 'vue';
import _export_sfc from '/plugin-vue/export-helper';

const name = 'App';
const propName = 'title';
const __default__ = defineComponent({
  name,
});
const _sfc_main = Object.assign(__default__, {
  props: [propName],
  setup(__props) {







return () => {}
}

});
var hoistStatic = /*#__PURE__*/_export_sfc(_sfc_main, [__FILE__]);

export { hoistStatic as default };
"
`;

exports[`fixtures > tests/fixtures/hoist-static-scope.vue 1`] = `
"import { defineComponent, openBlock, createElementBlock } from 'vue';
import _export_sfc from '/plugin-vue/export-helper';

const [name] = (
  /* hoist-static*/
  [\\"VarCompName\\"]
);
const __default__ = defineComponent({
  name
});
var _sfc_main = /* @__PURE__ */ defineComponent({
  ...__default__,
  setup(__props) {
    const test = (name2) => name2;
    return (_ctx, _cache) => {
      return openBlock(), createElementBlock(\\"div\\", null, \\"1\\");
    };
  }
});

var hoistStaticScope = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { hoistStaticScope as default };
"
`;

exports[`fixtures > tests/fixtures/short-emits.setup.tsx 1`] = `
"import { defineComponent } from 'vue';
import _export_sfc from '/plugin-vue/export-helper';

var _sfc_main = /* @__PURE__ */ defineComponent({
  __name: \\"short-emits.setup\\",
  emits: [\\"update:modelValue\\"],
  setup(__props) {
    return () => {
    };
  }
});

var shortEmits_setup = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { shortEmits_setup as default };
"
`;

exports[`fixtures > tests/fixtures/vue2-model.vue 1`] = `
"import { defineComponent } from 'vue';
import __MACROS_useVModel from '/vue-macros/define-models/use-vmodel';
import _export_sfc from '/plugin-vue/export-helper';

const __default__ = defineComponent({
  name: \\"Foo\\",
  model: {
    prop: \\"value\\",
    event: \\"changeInput\\"
  }
});
var _sfc_main = /* @__PURE__ */ defineComponent({
  ...__default__,
  props: {
    \\"value\\": { type: String, required: true },
    \\"title\\": { type: String, required: true }
  },
  emits: [\\"input\\", \\"changeInput\\", \\"change\\"],
  setup(__props, { emit }) {
    let { modelValue, value } = __MACROS_useVModel([\\"modelValue\\", \\"value\\", \\"input\\"], [\\"value\\", void 0, \\"changeInput\\"]);
    const handleClick = () => {
      emit(\\"change\\");
      modelValue.value = \\"hello, \\" + __props.title;
      value.value = \\"Word,\\" + __props.title;
    };
    return () => {
    };
  }
});

var vue2Model = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { vue2Model as default };
"
`;
